[package]
name = "rolly-polly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
macroquad = "0.4.4"
nalgebra = { version = "0.32", features = ["convert-glam021"] }
poly2tri-rs = "0.1.2"
rapier2d = "0.17.2"

[build-dependencies]
imagesize = "0.12.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3



