[package]
name = "rolly-polly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
earcutr = "0.4.3"
egui-macroquad = "0.15.0"
hecs = { version = "0.10.4", features = ["hecs-macros", "macros"] }
indexmap = "2.1.0"
itertools = "0.12.0"
macroquad = "0.3.26"
nalgebra = { version = "0.32", features = ["convert-glam021"] }
ordered-float = "4.2.0"
poly2tri-rs = "0.1.2"
quad-storage = "0.1.3"
rapier2d = { version = "0.18.0", features = ["simd-stable"] }
rustc-hash = "1.1.0"
simple-easing = "1.0.1"
svg2polylines = "0.8.1"
xml = "0.8.10"

[build-dependencies]
imagesize = "0.12.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3




